fix footer on iOS and bugs on "team" page

--- a/css/footer.css
+++ b/css/footer.css
@@ -39,10 +39,10 @@
     -moz-flex-flow: row wrap;
     flex-flow: row wrap;
 	
-    -webkit-justify-content: space-between;
-    -ms-justify-content: space-between;
-    -moz-justify-content: space-between;
-    justify-content: space-between;
+    -webkit-justify-content: flex-start;
+    -ms-justify-content: flex-start;
+    -moz-justify-content: flex-start;
+    justify-content: flex-start;
 	
     -webkit-align-content: space-around;
     -ms-align-content: space-around;
